--- a/JavaDocDocuments/com.example.sistema_gerenciamentofx/com/example/sistema_gerenciamentofx/main.html
+++ b/JavaDocDocuments/com.example.sistema_gerenciamentofx/com/example/sistema_gerenciamentofx/main.html
@@ -89,7 +89,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class main" class="title">Class main</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">com.example.sistema_gerenciamentofx.main</div>
+<div class="inheritance">com.example.sistema_gerenciamentofx.mainTeste</div>
 </div>
 <section class="class-description" id="class-description">
 <hr>
